--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://Shahir-Abdullah.github.io/cheez2",
   "name": "cheez2",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +12,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -30,5 +33,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@reach/router": "^1.3.4",
+    "axios": "^0.19.2",
+    "axios-mock-adapter": "^1.18.2",
+    "echarts": "^4.8.0",
+    "gh-pages": "^3.1.0",
+    "node-sass": "^4.14.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "sass-loader": "^9.0.2"
   }
 }
